--- a/content/post/2020-02-20-visualizing-matrix-transformations-with-gganimate.Rmd
+++ b/content/post/2020-02-20-visualizing-matrix-transformations-with-gganimate.Rmd
@@ -7,10 +7,16 @@ categories:
   - math
   - rstats
   - visualization
-tags:
-  - math
-  - riddles
   - linear algebra
+  - math
+tags:
+  - dplyr
+  - tidyr
+  - ggplot
+  - ggforce
+  - purrr
+  - knitr
+  - gganimate
 output:
   blogdown::html_page:
     toc: false
