--- a/content/post/2020-06-25-using-across-to-build-functions-with-dplyr-with-notes-on-legacy-approaches.Rmd
+++ b/content/post/2020-06-25-using-across-to-build-functions-with-dplyr-with-notes-on-legacy-approaches.Rmd
@@ -6,7 +6,7 @@ categories:
   - programming
   - rstats
 tags:
-  - rstats
+  - dplyr
 slug: using-across-to-build-functions-with-dplyr-with-notes-on-legacy-approaches
 thumbnail: /post/2020-06-25-using-across-to-build-functions-with-dplyr-with-notes-on-legacy-approaches_files/dplyr-example-cropped-more.png
 ---
