--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -5,10 +5,13 @@ date: '2020-09-11'
 categories:
   - politics
 tags:
-  - data journalism
-  - electoral college
-  - popular vote
-  - collective action problem
+  - pins
+  - readr
+  - dplyr
+  - janitor
+  - tidyr
+  - forcats
+  - ggplot
 slug: compromise-between-the-electoral-college-and-a-national-popular-vote
 output:
   blogdown::html_page:
