--- a/content/post/2020-11-23-remember-resampling-techniques-change-the-base-rates-of-your-predictions.Rmd
+++ b/content/post/2020-11-23-remember-resampling-techniques-change-the-base-rates-of-your-predictions.Rmd
@@ -8,10 +8,13 @@ categories:
   - statistics
   - rstats
 tags:
-  - imbalanced data
-  - misclassification
-  - ml
-  - rstats
+  - ggplot
+  - dplyr
+  - purrr
+  - tidyr
+  - knitr
+  - modelr
+  - yardstick
 slug: remember-resampling-techniques-change-the-base-rates-of-your-predictions
 thumbnail: /post/2020-11-23-remember-resampling-techniques-change-the-base-rates-of-your-predictions_files/figure-html/unnamed-chunk-11-1.png
 ---
