--- a/content/post/2022-01-18-identifying-r-functions-packages-used-in-github-repos/index.Rmd
+++ b/content/post/2022-01-18-identifying-r-functions-packages-used-in-github-repos/index.Rmd
@@ -2,15 +2,10 @@
 title: Identifying R Functions & Packages Used in GitHub Repos
 author: Bryan Shalloway
 date: '2022-01-18'
+tags: ["`r funspotr::spot_tags(drop_knitr = TRUE)`"]
 categories:
   - data science
   - rstats
-tags:
-  - dplyr
-  - readr
-  - DT
-  - funspotr
-  - stringr
 slug: identifying-r-functions-packages-used-in-github-repos
 codefolding_show: hide
 disable_codefolding: false
