--- a/content/post/2022-02-07-identifying-r-functions-packages-in-your-github-gists/index.Rmd
+++ b/content/post/2022-02-07-identifying-r-functions-packages-in-your-github-gists/index.Rmd
@@ -1,20 +1,14 @@
 ---
-title: Identifying R Functions & Packages in Github Gists
+title: Identifying R Functions & Packages in Github Gists (funspotr part 2)
 author: Bryan Shalloway
 date: '2022-02-07'
 categories:
   - data science
   - rstats
-tags:
-  - dplyr
-  - purrr
-  - stringr
-  - funspotr
-  - readr
-  - DT
+tags: ["`r funspotr::spot_tags(drop_knitr = TRUE)`"]
 slug: identifying-r-functions-packages-in-your-github-gists
 codefolding_show: show
-disable_codefolding: false
+disable_codefolding: no
 thumbnail: /2022/02/07/identifying-r-functions-packages-in-your-github-gists/images/filing-cabinets.jpg
 ---
 
@@ -22,9 +16,12 @@ thumbnail: /2022/02/07/identifying-r-functions-packages-in-your-github-gists/ima
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE, cache = TRUE)
 ```
 
-This post is a follow-up to my previous post [Identifying R Functions & Packages Used in GitHub Repos](https://www.bryanshalloway.com/2022/01/18/identifying-r-functions-packages-used-in-github-repos/) that introduced [funspotr](https://github.com/brshallo/funspotr).
+This post is part two in a series of posts introducing [funspotr](https://github.com/brshallo/funspotr). See also: 
 
-funspotr can also be applied to gists:
+- [Identifying R Functions & Packages Used in GitHub Repos (funspotr part 2)](https://www.bryanshalloway.com/2022/01/18/identifying-r-functions-packages-used-in-github-repos/)
+- [Network plots of code collections (funspotr part 3)](/2022/03/17/network-plots-of-code-collections-funspotr-part-3)
+
+This post shows how funspotr can also be applied to parse gists:
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">By functions or packages used...?<a href="https://t.co/kbSLOpQZLF">https://t.co/kbSLOpQZLF</a></p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1484921548154621953?ref_src=twsrc%5Etfw">January 22, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
